--- a/Aula04/ex001.html
+++ b/Aula04/ex001.html
@@ -13,19 +13,18 @@
         }
         body {
             font-family: Arial, Helvetica, sans-serif;
-            font-size: 10em;
+            font-size: 5em;
         }
     </style>
 </head>
 <body>
     <main>
-        <h1>CU</h1>
+        <h1>Meu Primeiro JavaScript</h1>
     </main>
     <script>
-        window.alert('Vá se foder matheus')
-        window.confirm('matheus é gay?')
-        window.prompt('Qual o nome do gay?')
-        window.alert('não é o miguel')
+        window.alert('oi')
+        window.confirm('coloque ok')
+        window.prompt('Tudo Bem?')
     </script>
 </body>
 </html>
