--- a/Aula04/ex001.html
+++ b/Aula04/ex001.html
@@ -17,12 +17,12 @@
         }
     </style>
 </head>
-<body>
+<body> <!---->
     <main>
         <h1>Meu Primeiro JavaScript</h1>
     </main>
     <script>
-        window.alert('oi')
+        window.alert('oi') //comentario /*comentario*/
         window.confirm('coloque ok')
         window.prompt('Tudo Bem?')
     </script>
