--- a/aula09/ex005.html
+++ b/aula09/ex005.html
@@ -6,13 +6,41 @@
     <title>Primeiros passos em DOM</title>
     <style>
         body {
-            background-color: ;
+            background-color: rgb(68, 125, 199);
+            color: white;
+            font: normal 18pt Arial;
         }
     </style>
 </head>
 <body>
     <h1>Iniciando estudos em DOM</h1>
     <p>Aqui vai o resultado</p>
-    <div>Clique em mim</div>
+    <p>Aprendendo a usar <strong>DOM</strong> em JavaScript.</p>
+    <div class="oi">Clique em mim</div>
+
+    <script>
+        //window.document.write(window.document.URL)
+        //window.document.write(window.navigator.appName)
+
+        /*var p1 = window.document.getElementsByTagName('p')[0]
+        window.document.write(p1.innerText)*/
+
+        /*var p1 = window.document.getElementsByTagName('p')[0]
+        p1.style.background = 'black'*/
+
+        /*var p1 = window.document.getElementsByTagName('p')[1]
+        window.document.write(p1.innerHTML)*/
+
+        /*var d = window.document.getElementById('oi')
+        d.style.background = 'green'
+        d.innerText = 'Estou aguardando'*/
+        
+        /*var d = window.document.getElementsByClassName('oi')[0]
+        d.style.background = 'green'
+        d.innerText = 'Estou aguardando'*/
+
+        /*var d = window.document.querySelector('div.oi')
+        d.style.color = 'blue'*/
+    </script>
 </body>
 </html>
