--- a/Exercicio JavaScript (E)/Exercicio 17/index.html
+++ b/Exercicio JavaScript (E)/Exercicio 17/index.html
@@ -3,32 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Verificador de idade</title>
+    <title>Tabuada</title>
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <header>
-        <h1>Verificador de Idade</h1>
+        <h1>Tabuada</h1>
     </header>
     <section>
         <div>
-            <label for="txtano">Ano de Nascimento
-                <input type="number" name="txtano" id="txtano" min="0">
-            </label>
+            <label for="txtn">Número:<input type="number" name="num" id="txtn"></label>
+            <input type="button" value="Gerar Tabuada" onclick="tabuada()">
         </div>
         <div>
-            <label for="">Sexo:
-                <input type="radio" name="radsex" id="masc" checked> Masculino
-            </label>
-            <label for="">
-                <input type="radio" name="radsex" id="fem">Feminino
-            </label>
-        </div>
-        <div>
-            <input type="button" value="Verificar" onclick="verificar()">
-        </div>
-        <div id="res">
-            Preencha os dados acima para ver o resultado!
+            <select name="tabuada" id="seltab">
+                <option>Digite um número acima</option>
+            </select>
         </div>
     </section>
     <footer>
