--- a/Exercicios JavaScript(F)/Exercicio 18/index.html
+++ b/Exercicios JavaScript(F)/Exercicio 18/index.html
@@ -13,7 +13,7 @@
     <section>
         <div>
             <label for="txtn">Número (entre 1 e 100)
-                <input type="number" id="txtn">
+                <input type="number" id="txtn" min="1">
             </label>
             <input type="button" value="Adicionar" onclick="adicionar()">
         </div>
@@ -25,7 +25,11 @@
         <div>
             <input type="button" value="Finalizar" onclick="finalizar()">
         </div>
-        <div id="res"></div>
+        <div id="total"></div>
+        <div id="maior"></div>
+        <div id="menor"></div>
+        <div id="soma"></div>
+        <div id="media"></div>
     </section>
     <footer>
         <p>&copy;Curso em Video</p>
